[B] Return battles given an army
