# src/apps/CryptoWars/backend/Routes/battles.route.ts
@@ -1,0 +1,11 @@
+import { Router } from 'express';
+import container from '../dependency-injection';
+import { BattlesGetController } from '../Controllers/Battles/BattlesGetController';
+import { requireAuth } from '../Auth';
+
+export const register = (router: Router) => {
+  const worldsGetController: BattlesGetController = container.get(
+    'Apps.Battlefield.Backend.Controllers.BattlesGetController'
+  );
+  router.get('/battles', requireAuth, worldsGetController.run.bind(worldsGetController));
+};
